# captivity

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  MANIFEST.in  README.md  login.sh  pyproject.toml  setup.py  timeline.md
.devcontainer/: devcontainer.json
.github/: SECURITY.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  publish.yml  version.yml
daemon-rs/: Cargo.toml
daemon-rs/src/: ipc.rs  main.rs  monitor.rs  probe.rs
docs/: architecture.md  cli.md  future_architecture.md
formal/: Captivity.cfg  Captivity.tla
launchd/: com.gaminization.captivity.plist
scripts/: captivity-creds.sh  captivity-dispatcher.sh  captivity-login.sh  captivity-reconnect.sh  check_docs_drift.sh  generate_docs.sh  install-dispatcher.sh  install-launchd.sh  install-service.sh  install-tray.sh  install-windows-service.ps1  release.sh  test_real_portal.sh
scripts/chaos_lab/: chaos_runner.sh  fake_portal.py  setup_chaos.sh  teardown_chaos.sh
src/captivity/: __init__.py  __main__.py  cli.py
src/captivity/core/: __init__.py  cache.py  config.py  credentials.py  fingerprint.py  login.py  parser.py  probe.py  profiles.py  retry.py  state.py  wifi.py
src/captivity/daemon/: __init__.py  bridge.py  dbus_monitor.py  events.py  network_monitor.py  runner.py  win_service.py
src/captivity/dashboard/: __init__.py  api.py  page.py  server.py
src/captivity/plugins/: __init__.py  base.py  generic.py  loader.py  marketplace.py  pronto.py  registry.py
src/captivity/telemetry/: __init__.py  bandwidth.py  session.py  stats.py
src/captivity/testing/: __init__.py  scenarios.py  simulator.py
src/captivity/ui/: __init__.py  notifier.py  tray.py
src/captivity/utils/: logging.py
systemd/: 99-captivity-dispatcher  captivity-tray.desktop  captivity-user.service  captivity.service  install-service.sh
tests/: conftest.py  test_credentials.sh  test_dispatcher.sh  test_login.sh  test_reconnect.sh
tests/integration/: __init__.py  test_boot_autonomy.py  test_boot_reconciliation.py  test_daemon_lifecycle.py  test_end_to_end_invariant.py  test_live_probe.py  test_retry_integration.py  test_simulator_login.py  test_state_machine_stress.py
tests/python/: test_bandwidth.py  test_bridge.py  test_cache.py  test_cli.py  test_cli_commands.py  test_cli_commands_mocked.py  test_config.py  test_credentials.py  test_cross_platform.py  test_dashboard.py  test_dashboard_api.py  test_dashboard_server.py  test_dbus_monitor.py  test_events.py  test_fingerprint.py  test_loader.py  test_logging.py  test_login.py  test_marketplace.py  test_notifier.py  test_parser.py  test_plugins.py  test_probe.py  test_profiles.py  test_properties.py  test_registry.py  test_retry.py  test_scenarios.py  test_session.py  test_simulator.py  test_state.py  test_stats.py  test_tray.py  test_tray_mocked.py  test_wifi.py  test_win_service.py  test_win_service_mocked.py
