[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "captivity-cli"
version = "2.3.0"
description = "Autonomous captive portal login client — never open a browser to log into WiFi again"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
authors = [
    {name = "garvarora"},
]
keywords = [
    "captive-portal",
    "wifi",
    "automation",
    "networkmanager",
    "login",
    "daemon",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "requests>=2.20",
    "keyring>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pylint>=2.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0",
    "pip-tools>=7.0",
]

[project.urls]
Homepage = "https://github.com/gaminization/captivity"
Repository = "https://github.com/gaminization/captivity"
Issues = "https://github.com/gaminization/captivity/issues"
Changelog = "https://github.com/gaminization/captivity/blob/main/CHANGELOG.md"

[project.scripts]
captivity = "captivity.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests/python"]

[tool.pylint.messages_control]
disable = ["C", "R", "W"]
