[package]
name = "captivity-daemon"
version = "2.0.0"
edition = "2021"
description = "Rust networking daemon for Captivity captive portal client"
license = "Apache-2.0"
authors = ["Captivity Contributors"]

[[bin]]
name = "captivity-daemon"
path = "src/main.rs"

[dependencies]
ureq = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
strip = true
