[package]
name = "captivity-daemon"
version = "3.0.0"
edition = "2021"
description = "Rust networking daemon for Captivity captive portal client"
license = "Apache-2.0"
authors = ["Captivity Contributors"]

[[bin]]
name = "captivity-daemon"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "net", "sync", "io-util"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
strip = true
